[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameFlowObstacle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/set-voice.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/go-voice.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/ready-voice.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/times-up-whistle.wav" type="AudioStream" id=6]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 1, 0.376471, 0.882353, 0.623529 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.1, 1.5, 2 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=8]
size = 56
font_data = ExtResource( 2 )

[node name="GameFlowObstacle" type="MeshInstance"]
mesh = SubResource( 7 )
material/0 = null
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, 0.0958354, -0.532185, -0.791691 )
texture = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 800, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="GameStartCountdown" type="Label" parent="Viewport"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="ReadyVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SetVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="GoVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TimesUpWhistlePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
